@@ -998,6 +998,36 @@ void network_device_add_wireless_network (NetworkDevice *dev, WirelessNetwork *n
 }
 
 
+static int sort_networks_function (WirelessNetwork *a, WirelessNetwork *b)
+{
+	const char *name_a = a->essid;
+	const char *name_b = b->essid;
+
+	if (name_a && !name_b)
+		return -1;
+	else if (!name_a && name_b)
+		return 1;
+	else if (!name_a && !name_b)
+		return 0;
+	else
+		return strcasecmp (name_a, name_b);
+}
+
+/*
+ * network_device_sort_wireless_networks
+ *
+ * Alphabetize the wireless networks list
+ *
+ */
+void network_device_sort_wireless_networks (NetworkDevice *dev)
+{
+	g_return_if_fail (dev != NULL);
+	g_return_if_fail (dev->type == DEVICE_TYPE_WIRELESS_ETHERNET);
+
+	dev->networks = g_slist_sort (dev->networks, (GCompareFunc) sort_networks_function);
+}
+
+
 /*
  * nmwa_dbus_get_one_wireless_network
  *
@@ -1159,9 +1189,12 @@ void nmwa_copy_data_model (NMWirelessApplet *applet)
 	for (elt = applet->dbus_device_list; elt; elt = g_slist_next (elt))
 	{
 		NetworkDevice	*src = (NetworkDevice *)(elt->data);
-		NetworkDevice	*dst = network_device_copy (src);
+		NetworkDevice	*dst = NULL;
 
-		if (dst)
+		if (src->type == DEVICE_TYPE_WIRELESS_ETHERNET)
+			network_device_sort_wireless_networks (src);
+
+		if ((dst = network_device_copy (src)))
 		{
 			/* Transfer ownership of device to list, don't need to unref it */
 			applet->gui_device_list = g_slist_append (applet->gui_device_list, dst);
